--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "cli.js",
   "scripts": {
     "release": "release-it --github.release",
-    "lint": "eslint src --ext js --cache",
+    "format": "prettier --write '**/*'",
+    "lint": "eslint . --ext js --cache",
     "lint:fix": "yarn lint --fix"
   },
   "lint-staged": {
@@ -17,7 +18,9 @@
       "yarn lint"
     ]
   },
-  "files": ["cli.js"],
+  "files": [
+    "cli.js"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -55,8 +58,6 @@
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.4",
     "postcss-import": "^12.0.1",
