--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
     "babel-plugin-transform-postcss": "^0.3.0",
     "babel-plugin-transform-replace-expressions": "^0.2.0",
     "cac": "^6.5.10",
+    "cssnano": "^4.1.10",
     "fs-extra": "^9.0.0",
     "ora": "^4.0.4",
     "rollup": "^2.10.8",
     "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-terser": "^6.0.1",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
     "sass": "^1.26.5"
   },
   "peerDependencies": {
@@ -60,9 +64,6 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.4",
-    "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.2.1",
-    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
