--- a/package.json
+++ b/package.json
@@ -42,14 +42,15 @@
     "cssnano": "^4.1.10",
     "fs-extra": "^9.0.0",
     "ora": "^4.0.4",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
     "rollup": "^2.10.8",
     "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-terser": "^6.0.1",
-    "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.2.1",
-    "postcss-preset-env": "^6.7.0",
-    "sass": "^1.26.5"
+    "sass": "^1.26.5",
+    "v8-compile-cache": "^2.1.0"
   },
   "peerDependencies": {
     "react": "16.13.1",
