--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/plugin-transform-react-jsx": "^7.9.4",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-replace": "^2.3.2",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "babel-plugin-transform-postcss": "^0.3.0",
