--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "release": "release-it --github.release",
     "format": "prettier --write '**/*'",
     "lint": "eslint . --ext js --cache",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "test": "jest"
   },
   "lint-staged": {
     "src/**/*": [
@@ -31,6 +32,10 @@
     "not ie 11",
     "not IE_Mob 11"
   ],
+  "jest": {
+    "testEnvironment": "node",
+    "testURL": "http://localhost"
+  },
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
@@ -64,12 +69,16 @@
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
-    "eslint": "7.0.0",
+    "directory-tree": "^2.2.4",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
+    "execa": "^4.0.2",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.4",
     "prettier": "^2.0.5",
     "react": "16.13.1",
