--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cac": "^6.5.10",
     "cssnano": "^4.1.10",
     "fs-extra": "^9.0.0",
+    "less": "^3.11.1",
     "ora": "^4.0.4",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
