--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-plugin-transform-replace-expressions": "^0.2.0",
     "cac": "^6.5.10",
     "fs-extra": "^9.0.0",
+    "kleur": "^3.0.3",
     "less": "^3.11.1",
     "ora": "^4.0.4",
     "pkg-up": "^3.1.0",
@@ -53,6 +54,7 @@
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "rollup": "^2.10.8",
+    "rollup-plugin-filesize": "^9.0.0",
     "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-terser": "^6.0.1",
