improve test suite, add storybook, add development instructions to readme

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
     "prettier/react",
     "plugin:import/errors",
     "plugin:import/warnings",
-    "eslint:recommended"
+    "eslint:recommended",
+    "plugin:react/recommended"
   ],
   "globals": {
     "document": true,
