--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write '**/*'",
     "lint": "eslint . --ext js --cache",
     "lint:fix": "yarn lint --fix",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "src/**/*": [
@@ -62,7 +64,12 @@
     "v8-compile-cache": "^2.1.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/react": "^5.3.19",
     "babel-eslint": "10.1.0",
+    "babel-loader": "^8.1.0",
     "directory-tree": "^2.2.4",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -70,6 +77,7 @@
     "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
     "execa": "^4.0.2",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
