--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.10.1",
     "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.3.2",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "babel-plugin-transform-postcss": "^0.3.0",
@@ -61,6 +63,7 @@
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-terser": "^6.0.1",
     "sass": "^1.26.5",
+    "typescript": "^3.9.3",
     "v8-compile-cache": "^2.1.0"
   },
   "devDependencies": {
