--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-terser": "^6.0.1",
     "sass": "^1.26.5",
+    "try-require": "^1.2.1",
     "v8-compile-cache": "^2.1.0"
   },
   "devDependencies": {
@@ -87,6 +88,8 @@
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
-    "release-it": "^13.6.1"
+    "release-it": "^13.6.1",
+    "typescript": "^3.9.5",
+    "rollup-plugin-typescript2": "^0.27.1"
   }
 }
