--- a/package.json
+++ b/package.json
@@ -34,62 +34,63 @@
     "testURL": "http://localhost"
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.10.1",
-    "@rollup/plugin-babel": "^5.0.2",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-json": "^4.0.3",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.3.2",
+    "@babel/core": "^7.11.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-babel": "^5.2.0",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "babel-plugin-transform-postcss": "^0.3.0",
     "babel-plugin-transform-replace-expressions": "^0.2.0",
-    "cac": "^6.5.10",
-    "fs-extra": "^9.0.0",
-    "kleur": "^3.0.3",
-    "less": "^3.11.1",
-    "ora": "^4.0.4",
+    "cac": "^6.6.1",
+    "fs-extra": "^9.0.1",
+    "kleur": "^4.1.1",
+    "less": "^3.12.2",
+    "ora": "^5.0.0",
     "pkg-up": "^3.1.0",
     "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.2.1",
+    "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
-    "rollup": "^2.10.8",
-    "rollup-plugin-filesize": "^9.0.0",
-    "rollup-plugin-postcss": "^3.1.1",
+    "rollup": "^2.26.9",
+    "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-size-snapshot": "^0.12.0",
-    "rollup-plugin-terser": "^6.0.1",
-    "sass": "^1.26.5",
+    "rollup-plugin-terser": "^7.0.1",
+    "sass": "^1.26.10",
     "try-require": "^1.2.1",
-    "v8-compile-cache": "^2.1.0"
+    "v8-compile-cache": "^2.1.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/addons": "^6.0.21",
+    "@storybook/react": "^6.0.21",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.1.0",
     "directory-tree": "^2.2.4",
-    "eslint": "^7.1.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jest": "^23.13.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "execa": "^4.0.2",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "execa": "^4.0.3",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.4",
-    "prettier": "^2.0.5",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
-    "release-it": "^13.6.1",
-    "typescript": "^3.9.5",
-    "rollup-plugin-typescript2": "^0.27.1"
+    "release-it": "^13.7.1",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "slash": "^3.0.0",
+    "typescript": "^4.0.2"
   }
 }
