--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
         matrix:
-            node-version: [1.x, 12.x, 14.x]
+            node-version: [12.x, 14.x]
             os: [ubuntu-latest]
     name: Node ${{ matrix.node-version }}
 
