--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,39 +1,50 @@
 name: Node CI
-
-on:
+"on":
+  schedule: []
   push:
     paths-ignore:
-      - "**.md"
-      - "docs/**"
+    - '**.md'
+    - docs/**
+    tags-ignore: []
+    branches: []
+    tags: []
+  release:
+    types: []
   pull_request:
     paths-ignore:
-      - "**.md"
-      - "docs/**"
-
+    - '**.md'
+    - docs/**
+    tags-ignore: []
+    branches: []
+    tags: []
 env:
-    CI: true
-
+  A: foo
+  CI: "true"
+defaults:
+  run: {}
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-        matrix:
-            node-version: [12.x, 14.x]
-            os: [ubuntu-latest]
+      matrix:
+        node-version:
+        - 12.x
+        - 14.x
+        os:
+        - ubuntu-latest
     name: Node ${{ matrix.node-version }}
-
+    env: {}
+    defaults:
+      run: {}
+    outputs: {}
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: install
-        run: |
-          yarn install
-
-      - name: test
-        run: |
-          yarn test
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      name: Use Node.js ${{ matrix.node-version }}
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: install
+      run: |
+        yarn install
+    - name: test
+      run: yarn test
