--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,39 +1,36 @@
-name: Node CI
-
-on:
+name: CI
+"on":
   push:
     paths-ignore:
-      - "**.md"
-      - "docs/**"
+    - '**.md'
+    - docs/**
   pull_request:
     paths-ignore:
-      - "**.md"
-      - "docs/**"
-
+    - '**.md'
+    - docs/**
 env:
-    CI: true
-
+  CI: "true"
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-        matrix:
-            node-version: [12.x, 14.x]
-            os: [ubuntu-latest]
+      matrix:
+        node-version:
+        - 11.x
+        - 12.x
+        - 14.x
+        os:
+        - ubuntu-latest
     name: Node ${{ matrix.node-version }}
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: install
-        run: |
-          yarn install
-
-      - name: test
-        run: |
-          yarn test
+    - uses: actions/checkout@v2
+      id: d7a5459c-99f9-4016-9528-0ec359197b6e
+    - uses: actions/setup-node@v1
+      name: Use Node.js ${{ matrix.node-version }}
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: install
+      run: |
+        yarn install
+    - name: test
+      run: yarn test
